--- a/scss/_event-tabs.sass
+++ b/scss/_event-tabs.sass
@@ -41,6 +41,7 @@
   display: none
   padding: 20px 30px 30px
   background: #fff
+  min-height: 50vh
   order: 99
 
 .input:checked + .label + .view-panel
